[gd_scene load_steps=6 format=3 uid="uid://bvyp644lngrf7"]

[ext_resource type="Script" path="res://scenes/screens/mapping_list_screen.gd" id="1_ce8r7"]
[ext_resource type="Theme" uid="uid://duj3xsv2vc43h" path="res://assets/themes/theme.tres" id="3_gwjqx"]
[ext_resource type="PackedScene" uid="uid://cvee0wu2i2dcp" path="res://scenes/components/mapping_list_item_header.tscn" id="4_0ng50"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_shycj"]
color = Color(1, 1, 1, 0.313726)
thickness = 2

[sub_resource type="LabelSettings" id="LabelSettings_4rh5l"]
font_size = 24

[node name="MappingListScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_gwjqx")
script = ExtResource("1_ce8r7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_gwjqx")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_shycj")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
text = "Mapping List"
label_settings = SubResource("LabelSettings_4rh5l")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_shycj")

[node name="SearchContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SearchContainer"]
layout_mode = 2
text = "Search by Name:"

[node name="SearchLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SearchContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchButton" type="Button" parent="MarginContainer/VBoxContainer/SearchContainer"]
layout_mode = 2
text = "Search"

[node name="ListContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ListContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MappingContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ListContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="MappingListItemHeader" parent="MarginContainer/VBoxContainer/ListContainer/ScrollContainer/MappingContainer" instance=ExtResource("4_0ng50")]
layout_mode = 2

[node name="PageContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_gwjqx")
alignment = 1

[node name="PreviousPageButton" type="Button" parent="MarginContainer/VBoxContainer/PageContainer"]
layout_mode = 2
text = "<"

[node name="PageLabel" type="Label" parent="MarginContainer/VBoxContainer/PageContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 0 (0 from total 0)"
horizontal_alignment = 1

[node name="NextPageButton" type="Button" parent="MarginContainer/VBoxContainer/PageContainer"]
layout_mode = 2
text = ">"

[node name="CreateMappingButton" type="Button" parent="MarginContainer/VBoxContainer/PageContainer"]
layout_mode = 2
text = "Create"

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/SearchContainer/SearchLineEdit" to="." method="_on_search_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SearchContainer/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PageContainer/PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PageContainer/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PageContainer/CreateMappingButton" to="." method="_on_create_mapping_button_pressed"]
